cpp/test/Slice/errorDetection/RedefinitionAsInterface.ice
// **********************************************************************
//
// Copyright (c) 2001
// MutableRealms, Inc.
// Huntsville, AL, USA
//
// All Rights Reserved
//
// **********************************************************************

vector<int> Vector1;
interface Vector1;

vector<int> Vector2;
interface Vector2 { };
